--- a/src/main/resources/com.example.reteadesocializare/LogIn.fxml
+++ b/src/main/resources/com.example.reteadesocializare/LogIn.fxml
@@ -11,33 +11,33 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.exemple.reteadesocializare.controllers.LogIn">
    <children>
-      <Button fx:id="logInButton" layoutX="226.0" layoutY="268.0" mnemonicParsing="false" onAction="#onLogInButtonCLick" prefHeight="26.0" prefWidth="111.0" text="Log In" textAlignment="CENTER" textFill="#1408ff">
+      <Button fx:id="logInButton" layoutX="227.0" layoutY="267.0" mnemonicParsing="false" onAction="#onLogInButtonCLick" prefHeight="26.0" prefWidth="111.0" text="Log In" textAlignment="CENTER" textFill="#1408ff" AnchorPane.leftAnchor="225.0" AnchorPane.rightAnchor="225.0">
          <font>
             <Font name="System Bold" size="13.0" />
          </font></Button>
-      <TextField fx:id="email" layoutX="207.0" layoutY="167.0" onAction="#onTextEntered" prefHeight="26.0" prefWidth="150.0" promptText="Email" />
-      <PasswordField fx:id="password" layoutX="210.0" layoutY="217.0" onAction="#onPasswordEnterd" prefHeight="26.0" prefWidth="150.0" promptText="Password" />
-      <Hyperlink layoutX="309.0" layoutY="295.0" onAction="#onSignInClick" prefHeight="18.0" prefWidth="34.0" text="Sign in!" underline="true" wrapText="true">
+      <TextField fx:id="email" layoutX="227.0" layoutY="157.0" onKeyTyped="#onTextChanged" prefHeight="26.0" prefWidth="150.0" promptText="Email" AnchorPane.leftAnchor="225.0" AnchorPane.rightAnchor="225.0" />
+      <PasswordField fx:id="password" layoutX="227.0" layoutY="214.0" onKeyTyped="#onPasswordChanged" prefHeight="26.0" prefWidth="150.0" promptText="Password" AnchorPane.leftAnchor="225.0" AnchorPane.rightAnchor="225.0" />
+      <Hyperlink layoutX="326.0" layoutY="294.0" onAction="#onSignInClick" prefHeight="18.0" prefWidth="42.0" text="Sign up!" underline="true" wrapText="true" AnchorPane.leftAnchor="326.0" AnchorPane.rightAnchor="232.0">
          <font>
             <Font size="8.0" />
          </font>
       </Hyperlink>
-      <Label layoutX="226.0" layoutY="298.0" text="Don't have an account?">
+      <Label layoutX="237.0" layoutY="289.0" prefHeight="27.0" prefWidth="91.0" text="Don't have an account?" AnchorPane.leftAnchor="237.0" AnchorPane.rightAnchor="272.0">
          <font>
             <Font size="8.0" />
          </font>
       </Label>
-      <Label layoutX="225.0" layoutY="90.0" text="Sign in" textFill="#0015f7">
+      <Label layoutX="233.0" layoutY="82.0" text="Sign in" textFill="#0015f7" AnchorPane.leftAnchor="233.0" AnchorPane.rightAnchor="217.0">
          <font>
             <Font name="System Bold" size="37.0" />
          </font>
       </Label>
-      <Text fx:id="emailErrorText" fill="RED" layoutX="213.0" layoutY="203.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Wrong email!" visible="false" wrappingWidth="57.64306640625">
+      <Text fx:id="emailErrorText" fill="RED" layoutX="227.0" layoutY="194.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Wrong email!" visible="false" wrappingWidth="57.64306640625" AnchorPane.leftAnchor="225.0" AnchorPane.rightAnchor="225.0">
          <font>
             <Font name="System Bold" size="9.0" />
          </font>s
       </Text>
-      <Text fx:id="passwordErrorText" fill="RED" layoutX="213.0" layoutY="253.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Wrong password!" visible="false" wrappingWidth="83.20000000000005">
+      <Text fx:id="passwordErrorText" fill="RED" layoutX="227.0" layoutY="251.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Wrong password!" visible="false" wrappingWidth="83.20000000000005" AnchorPane.leftAnchor="225.0" AnchorPane.rightAnchor="225.0">
          <font>
             <Font name="System Bold" size="9.0" />
          </font>
