--- a/src/main/resources/com.example.reteadesocializare/SignIn.fxml
+++ b/src/main/resources/com.example.reteadesocializare/SignIn.fxml
@@ -1,31 +1,58 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.exemple.reteadesocializare.controllers.SignIn">
    <children>
-      <Label layoutX="159.0" layoutY="39.0" text="Create an account" textFill="#691eea">
+      <Label layoutX="168.0" layoutY="30.0" text="Create an account" textFill="#691eea">
          <font>
             <Font size="33.0" />
          </font>
       </Label>
-      <TextField layoutX="204.0" layoutY="116.0" prefHeight="26.0" prefWidth="189.0" promptText="first name" />
-      <TextField layoutX="205.0" layoutY="152.0" prefHeight="26.0" prefWidth="190.0" promptText="last name" />
-      <TextField layoutX="205.0" layoutY="188.0" prefHeight="26.0" prefWidth="190.0" promptText="email" />
-      <TextField layoutX="205.0" layoutY="222.0" prefHeight="26.0" prefWidth="190.0" promptText="password" />
-      <TextField layoutX="205.0" layoutY="258.0" prefHeight="26.0" prefWidth="190.0" promptText="confirm password" />
-      <Button fx:id="createAccount" layoutX="235.0" layoutY="310.0" mnemonicParsing="false" onAction="#onCreateAccountClick" prefHeight="30.0" prefWidth="126.0" text="Create account" textFill="#2500f7">
+      <TextField fx:id="first_name" layoutX="204.0" layoutY="87.0" onKeyPressed="#onFirstnameTextChanged" prefHeight="26.0" prefWidth="190.0" promptText="first name" />
+      <TextField fx:id="last_name" layoutX="205.0" layoutY="134.0" onKeyPressed="#onLastnameTextChanged" prefHeight="26.0" prefWidth="190.0" promptText="last name" />
+      <TextField fx:id="email" layoutX="205.0" layoutY="179.0" onKeyPressed="#onEmailTextChanged" prefHeight="26.0" prefWidth="190.0" promptText="email" />
+      <TextField fx:id="password" layoutX="204.0" layoutY="228.0" onKeyPressed="#onPasswordTextChanged" prefHeight="26.0" prefWidth="190.0" promptText="password" />
+      <TextField fx:id="password_confirm" layoutX="204.0" layoutY="267.0" onKeyPressed="#onConfirmPasswordTextChanged" prefHeight="26.0" prefWidth="190.0" promptText="confirm password" />
+      <Button fx:id="createAccount" layoutX="237.0" layoutY="317.0" mnemonicParsing="false" onAction="#onCreateAccountClick" prefHeight="30.0" prefWidth="126.0" text="Create account" textFill="#2500f7">
          <font>
             <Font name="System Bold" size="14.0" />
          </font></Button>
-      <Button layoutX="21.0" layoutY="14.0" mnemonicParsing="false" onAction="#goBackToLogIn" prefHeight="31.0" prefWidth="40.0" text="⬅" textFill="#0d00ff">
+      <Text fx:id="emailErrorText" fill="RED" layoutX="205.0" layoutY="215.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Not a valid email!" visible="false" wrappingWidth="189.5999999999999">
          <font>
-            <Font name="System Bold" size="15.0" />
+            <Font name="System Bold" size="9.0" />
          </font>
-      </Button>
+      </Text>
+      <Text fx:id="passwordErrorText" fill="RED" layoutX="204.0" layoutY="303.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Passwords didn’t match!" visible="false" wrappingWidth="189.5999999999999">
+         <font>
+            <Font name="System Bold" size="9.0" />
+         </font>
+      </Text>
+      <Text fx:id="firstnameErrorText" fill="RED" layoutX="205.0" layoutY="124.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Not a real firstname!" visible="false" wrappingWidth="189.5999999999999">
+         <font>
+            <Font name="System Bold" size="9.0" />
+         </font>
+      </Text>
+      <Text fx:id="lastnameErrorText" fill="RED" layoutX="205.0" layoutY="170.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Not a real lastname!" visible="false" wrappingWidth="189.5999999999999">
+         <font>
+            <Font name="System Bold" size="9.0" />
+         </font>
+      </Text>
+      <Text layoutX="245.0" layoutY="359.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Alredy have a account?">
+         <font>
+            <Font size="8.0" />
+         </font>
+      </Text>
+      <Hyperlink layoutX="326.0" layoutY="347.0" onAction="#goBackToLogIn" text="LogIn!">
+         <font>
+            <Font size="8.0" />
+         </font>
+      </Hyperlink>
    </children>
 </AnchorPane>
