--- a/src/main/resources/com.example.reteadesocializare/Application.fxml
+++ b/src/main/resources/com.example.reteadesocializare/Application.fxml
@@ -3,11 +3,14 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ColorPicker?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
@@ -41,7 +44,16 @@
           </Tab>
             <Tab onSelectionChanged="#enterMessages" text="Messages">
               <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <TextField layoutX="215.0" layoutY="346.0" onKeyPressed="#sendMessage" prefHeight="38.0" prefWidth="498.0" promptText="Write a message" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+                        <ScrollPane layoutX="514.0" layoutY="2.0" prefHeight="346.0" prefWidth="500.0" AnchorPane.bottomAnchor="38.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                           <content>
+                              <VBox prefHeight="345.0" prefWidth="494.0" />
+                           </content>
+                        </ScrollPane>
+                        <ListView fx:id="messagesFriendList" layoutY="14.0" prefHeight="386.0" prefWidth="214.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                     </children></AnchorPane>
               </content>
             </Tab>
             <Tab text="Friends Requests">
