--- a/src/main/resources/com.example.reteadesocializare/SignIn.fxml
+++ b/src/main/resources/com.example.reteadesocializare/SignIn.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.exemple.reteadesocializare.controllers.SignIn">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.exemple.reteadesocializare.controllers.SignUp">
    <children>
       <Label layoutX="168.0" layoutY="30.0" text="Create an account" textFill="#691eea">
          <font>
